# ink-validator

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md
cli/: Cargo.toml
cli/src/: main.rs
docs/: index.html  index.js
npm_package/: Cargo.toml  Makefile  README.md  package.json.in  wasm-pack-build.sh
npm_package/example/: index.html  invalid.wasm  node.js  package.json  valid.wasm  web.js  webpack.config.js
npm_package/src/: lib.rs
src/: instrument.rs  lib.rs
