[package]
name = "ink-validator-core"
version = "0.1.0"
authors = ["Kevin Wang <wy721@qq.com>"]
edition = "2021"

[dependencies]
anyhow = { version = "1", default-features = false }
wasm-instrument = { version = "0.4.0", default-features = false }
wasmi = { version = "0.21.0", default-features = false }
wasmparser = { package = "wasmparser-nostd", version = "0.91", default-features = false }
