[package]
name = "ink-validator"
version = "0.1.0"
authors = ["Kevin Wang <wy721@qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
validator = { package = "ink-validator-core", path = ".." }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
